# ml-handbook-practice

./: Dockerfile  LICENSE  README.md  pyproject.toml
part01_base/: hw01_linear_models.ipynb  hw02_metric_methods.ipynb
